...
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <EditText
            android:id="@+id/nicknameEditText"
            android:textSize="14sp"
            android:typeface="sans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
...
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
...
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/password"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/passwordConfirmEditText"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
...
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/confirmPassword"
            android:typeface="sans"/>

        <EditText
            android:id="@+id/emailEditText"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
...
            android:hint="@string/email"
            android:typeface="sans"/>

    </RelativeLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:typeface="sans"
        android:background="@drawable/shape_rectangle_green"
        android:textColor="#FFFFFF"
...
